--- a/trunk/src/tfiles/good_sample.html
+++ b/trunk/src/tfiles/good_sample.html
@@ -1,4 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+"http://www.w3.org/TR/html4/strict.dtd">
 <HTML>
 <HEAD>
 <TITLE>txt2html/HTML::TextToHTML Sample Conversion</TITLE>
