--- a/tfiles/good_links.html
+++ b/tfiles/good_links.html
@@ -1,4 +1,4 @@
-<p>This is a test of <a href="http://txt2html.sourceforge.net/">txt2html</a>.
+<p>This is a test of <a href="https://github.com/resurrecting-open-source-projects/txt2html">txt2html</a>.
 </p>
 <h1><a name="section_1">testing txt2html in a header</a></h1>
 
