--- a/tfiles/good_pre.html
+++ b/tfiles/good_pre.html
@@ -1,6 +1,6 @@
 <p>## Test on pre-in-list
 </p>
-<p><a href="http://txt2html.sourceforge.net/">txt2html</a>.pl -p 7 -pb 1
+<p><a href="https://github.com/resurrecting-open-source-projects/txt2html">txt2html</a>.pl -p 7 -pb 1
 </p>
 <p>Here is an example bad file:
 </p>
